i965: disable NIR linking on HSW and below

Fixes: 379b24a40d3d "i965: make use of nir linking"

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=103537
Reviewed-by: Iago Toral Quiroga <itoral@igalia.com>
(cherry picked from commit a9000cb860242d2d0308aec3e8fc20148a2c5eec)